Fix long contributor name layout issue (#2960)

--- a/packages/typescriptlang-org/src/templates/documentation.scss
+++ b/packages/typescriptlang-org/src/templates/documentation.scss
@@ -377,6 +377,7 @@
   text-align: center;
   display: inline-block;
   position: relative;
+  overflow: hidden;
   margin-top: 12px;
   margin-right: 3px;
 
